--- a/grid-exercise.css
+++ b/grid-exercise.css
@@ -80,7 +80,7 @@ body {
 
 /*===================Оформление=====================*/
 .grid-container {
-  width: 100vw;
+  width: 100%;
   height: 100vh;
 }
 
