--- a/grid-exercise.css
+++ b/grid-exercise.css
@@ -55,9 +55,9 @@ body {
 
 .footer {
   display: grid;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-columns: repeat(4, 1fr);
   grid-template-rows: 1fr;
-  gap: 5px 5px;
+  gap: 5px;
   grid-template-areas: "section-1 section-2 section-3 section-4";
   grid-area: footer;
 }
