--- a/grid-exercise.css
+++ b/grid-exercise.css
@@ -2,35 +2,43 @@ body {
   min-width: 350px;
   min-height: 100vh;
   box-sizing: border-box;
+  background-color: #545b6d;
+  font-family: "Zen Kurenaido", sans-serif;
+  font-size: 24px;
+  text-align: center;
+  color: rgb(53, 52, 52);
 }
-/*=================Позиционирование==================*/
+
 .grid-container {
+  width: 100%;
+  min-height: 100vh;
+  background-color: #545b6d;
   display: grid;
-  grid-template-columns: 1.3fr 1.3fr 0.4fr 1fr;
-  grid-template-rows: 1fr 1fr 1fr 1fr 1fr;
-  gap: 0px 0px;
+  grid-template-columns: 3fr 1fr;
+  grid-template-rows: minmax(100px, auto) 1fr minmax(100px, auto);
   grid-template-areas:
-    "header header header header"
-    "main-content main-content aside aside"
-    "main-content main-content aside aside"
-    "main-content main-content aside aside"
-    "footer footer footer footer";
+    "header header"
+    "main-content aside"
+    "footer footer";
 }
 
 .header {
   grid-area: header;
+  padding: 8px;
 }
 
 .main-content {
+  grid-area: main-content;
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 1.6fr 0.7fr 0.7fr;
-  gap: 5px 5px;
+  grid-template-rows: 1fr repeat(2, 0.5fr);
+  padding: 8px;
+  gap: 8px;
   grid-template-areas:
     "main-text main-text"
     "chapter-1 chapter-2"
     "chapter-3 chapter-3";
-  grid-area: main-content;
+  background-color: #b8b3a5;
 }
 
 .main-text {
@@ -49,84 +57,39 @@ body {
   grid-area: chapter-3;
 }
 
+.main-content article {
+  background-color: #808080;
+  padding: 8px;
+}
+
 .aside {
   grid-area: aside;
-}
-
-.footer {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-template-rows: 1fr;
-  gap: 5px;
-  grid-template-areas: "section-1 section-2 section-3 section-4";
-  grid-area: footer;
-}
-
-.section-1 {
-  grid-area: section-1;
-}
-
-.section-2 {
-  grid-area: section-2;
-}
-
-.section-3 {
-  grid-area: section-3;
-}
-
-.section-4 {
-  grid-area: section-4;
-}
-
-/*===================Оформление=====================*/
-.grid-container {
-  width: 100%;
-  height: 100vh;
-}
-
-.header {
-  background-color: #545b6d;
-}
-
-.main-content {
-  background-color: #b8b3a5;
-}
-
-.chapter-1,
-.chapter-2,
-.chapter-3 {
-  background-color: #808080;
-}
-
-.aside {
   background-color: #b0a1a4;
 }
 
 .footer {
-  background-color: #545b6d;
+  grid-area: footer;
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: 1fr;
+  padding: 8px;
+  gap: 8px;
 }
 
-.section-1,
-.section-2,
-.section-3,
-.section-4 {
+.footer section {
   background-color: #727d91;
-  margin-top: 5px;
-  margin-bottom: 5px;
-}
-
-h1,
-h2,
-p {
-  font-family: "Zen Kurenaido", sans-serif;
-  font-size: 24px;
-  text-align: center;
-  color: rgb(53, 52, 52);
+  padding: 8px;
 }
 
 h1 {
-  font-family: "Zen Kurenaido", sans-serif;
   font-size: 36px;
-  text-align: center;
   color: darkgray;
+}
+
+h2 {
+  font-size: 24px;
+}
+
+h3 {
+  font-size: 18px;
 }
